test/compile_errors/err_union_literal_two_fields.w
//! expect-error: union literal requires exactly one named field initializer

type Value = union { i: i32, f: f32 }

fn main:
    let v = Value { i: 1, f: 1.0 }
    print("x")
